fixed problems belong to password