@@ -11,9 +11,9 @@ import com.epam.gym.dto.response.TrainingResponse;
 import com.epam.gym.entity.Trainee;
 import com.epam.gym.entity.Trainer;
 import com.epam.gym.entity.Training;
+import com.epam.gym.entity.TrainingType;
 import com.epam.gym.entity.User;
 import com.epam.gym.enums.TrainingTypeName;
-import com.epam.gym.exception.ValidationException;
 import com.epam.gym.mapper.TraineeMapper;
 import com.epam.gym.mapper.TrainerMapper;
 import com.epam.gym.mapper.TrainingMapper;
@@ -21,6 +21,9 @@ import com.epam.gym.mapper.UserMapper;
 import com.epam.gym.service.TraineeService;
 import com.epam.gym.service.TrainingService;
 import com.epam.gym.service.UserService;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.SerializationFeature;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -29,21 +32,23 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.MediaType;
+import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
 import java.time.LocalDate;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @ExtendWith(MockitoExtension.class)
 @DisplayName("TraineeController Tests")
 class TraineeControllerTest {
+
+    private MockMvc mockMvc;
 
     @Mock
     private TraineeService traineeService;
@@ -69,540 +74,406 @@ class TraineeControllerTest {
     @InjectMocks
     private TraineeController traineeController;
 
+    private ObjectMapper objectMapper;
+
+    private Trainee testTrainee;
+    private Trainer testTrainer;
+    private TrainingType trainingType;
+    private TraineeProfileResponse profileResponse;
+    private RegistrationResponse registrationResponse;
+
     private static final String USERNAME = "john.doe";
-    private static final String PASSWORD = "password123";
     private static final String FIRST_NAME = "John";
     private static final String LAST_NAME = "Doe";
+    private static final LocalDate DATE_OF_BIRTH = LocalDate.of(1990, 5, 15);
+    private static final String ADDRESS = "123 Main St";
+    private static final String PASSWORD = "password123";
+
+    @BeforeEach
+    void setUp() {
+        mockMvc = MockMvcBuilders.standaloneSetup(traineeController).build();
+
+        objectMapper = new ObjectMapper();
+        objectMapper.registerModule(new JavaTimeModule());
+        objectMapper.disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
+
+        // Create User
+        User testUser = User.builder()
+                .id(1L)
+                .firstName(FIRST_NAME)
+                .lastName(LAST_NAME)
+                .username(USERNAME)
+                .password(PASSWORD)
+                .isActive(true)
+                .build();
+
+        // Create TrainingType (no builder, use constructor)
+        trainingType = new TrainingType(1L, TrainingTypeName.FITNESS);
+
+        // Create Trainee
+        testTrainee = Trainee.builder()
+                .id(1L)
+                .user(testUser)
+                .dateOfBirth(DATE_OF_BIRTH)
+                .address(ADDRESS)
+                .build();
+
+        // Create Trainer User
+        User trainerUser = User.builder()
+                .id(2L)
+                .firstName("Jane")
+                .lastName("Smith")
+                .username("jane.smith")
+                .password("trainerPass")
+                .isActive(true)
+                .build();
+
+        // Create Trainer
+        testTrainer = Trainer.builder()
+                .id(1L)
+                .user(trainerUser)
+                .specialization(trainingType)
+                .build();
+
+        // Create Response DTOs
+        profileResponse = TraineeProfileResponse.builder()
+                .username(USERNAME)
+                .firstName(FIRST_NAME)
+                .lastName(LAST_NAME)
+                .dateOfBirth(DATE_OF_BIRTH)
+                .address(ADDRESS)
+                .isActive(true)
+                .trainers(new ArrayList<>())
+                .build();
+
+        registrationResponse = RegistrationResponse.builder()
+                .username(USERNAME)
+                .password(PASSWORD)
+                .build();
+    }
+
+    // ==================== REGISTER TRAINEE TESTS ====================
 
     @Nested
     @DisplayName("Register Trainee Tests")
     class RegisterTraineeTests {
 
-        private TraineeRegistrationRequest registrationRequest;
-        private Trainee trainee;
-        private RegistrationResponse registrationResponse;
-
-        @BeforeEach
-        void setUp() {
-            registrationRequest = new TraineeRegistrationRequest();
-            registrationRequest.setFirstName(FIRST_NAME);
-            registrationRequest.setLastName(LAST_NAME);
-            registrationRequest.setDateOfBirth(LocalDate.of(1990, 1, 15));
-            registrationRequest.setAddress("123 Main St");
-
-            User user = new User();
-            user.setUsername(USERNAME);
-            user.setPassword(PASSWORD);
-            user.setFirstName(FIRST_NAME);
-            user.setLastName(LAST_NAME);
-
-            trainee = new Trainee();
-            trainee.setUser(user);
-
-            registrationResponse = new RegistrationResponse();
-            registrationResponse.setUsername(USERNAME);
-            registrationResponse.setPassword(PASSWORD);
-        }
-
         @Test
-        @DisplayName("Should register trainee successfully")
-        void registerTrainee_Success() {
-            // Given
-            when(traineeService.createProfile(registrationRequest)).thenReturn(trainee);
-            when(userMapper.toRegistrationResponse(trainee)).thenReturn(registrationResponse);
+        @DisplayName("Should return 201 CREATED when registration is successful")
+        void registerTrainee_WithValidRequest_ReturnsCreated() throws Exception {
+            // Arrange
+            TraineeRegistrationRequest request = TraineeRegistrationRequest.builder()
+                    .firstName(FIRST_NAME)
+                    .lastName(LAST_NAME)
+                    .dateOfBirth(DATE_OF_BIRTH)
+                    .address(ADDRESS)
+                    .build();
 
-            // When
-            ResponseEntity<RegistrationResponse> response = traineeController.registerTrainee(registrationRequest);
-
-            // Then
-            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.CREATED);
-            assertThat(response.getBody()).isNotNull();
-            assertThat(response.getBody().getUsername()).isEqualTo(USERNAME);
-            assertThat(response.getBody().getPassword()).isEqualTo(PASSWORD);
-
-            verify(traineeService).createProfile(registrationRequest);
-            verify(userMapper).toRegistrationResponse(trainee);
-        }
-
-        @Test
-        @DisplayName("Should call service with correct request")
-        void registerTrainee_CallsServiceWithCorrectRequest() {
-            // Given
-            when(traineeService.createProfile(any(TraineeRegistrationRequest.class))).thenReturn(trainee);
+            when(traineeService.createProfile(any(TraineeRegistrationRequest.class))).thenReturn(testTrainee);
             when(userMapper.toRegistrationResponse(any(Trainee.class))).thenReturn(registrationResponse);
 
-            // When
-            traineeController.registerTrainee(registrationRequest);
+            // Act & Assert
+            mockMvc.perform(post("/api/trainees")
+                            .contentType(MediaType.APPLICATION_JSON)
+                            .content(objectMapper.writeValueAsString(request)))
+                    .andExpect(status().isCreated())
+                    .andExpect(jsonPath("$.username").value(USERNAME))
+                    .andExpect(jsonPath("$.password").value(PASSWORD));
 
-            // Then
-            verify(traineeService).createProfile(registrationRequest);
+            verify(traineeService).createProfile(any(TraineeRegistrationRequest.class));
+            verify(userMapper).toRegistrationResponse(any(Trainee.class));
+        }
+
+        @Test
+        @DisplayName("Should return 201 CREATED without optional fields")
+        void registerTrainee_WithoutOptionalFields_ReturnsCreated() throws Exception {
+            // Arrange
+            TraineeRegistrationRequest request = TraineeRegistrationRequest.builder()
+                    .firstName(FIRST_NAME)
+                    .lastName(LAST_NAME)
+                    .build();
+
+            when(traineeService.createProfile(any(TraineeRegistrationRequest.class))).thenReturn(testTrainee);
+            when(userMapper.toRegistrationResponse(any(Trainee.class))).thenReturn(registrationResponse);
+
+            // Act & Assert
+            mockMvc.perform(post("/api/trainees")
+                            .contentType(MediaType.APPLICATION_JSON)
+                            .content(objectMapper.writeValueAsString(request)))
+                    .andExpect(status().isCreated());
+
+            verify(traineeService).createProfile(any(TraineeRegistrationRequest.class));
         }
     }
+
+    // ==================== GET TRAINEE PROFILE TESTS ====================
 
     @Nested
     @DisplayName("Get Trainee Profile Tests")
     class GetTraineeProfileTests {
 
-        private Trainee trainee;
-        private TraineeProfileResponse profileResponse;
-
-        @BeforeEach
-        void setUp() {
-            User user = new User();
-            user.setUsername(USERNAME);
-            user.setFirstName(FIRST_NAME);
-            user.setLastName(LAST_NAME);
-            user.setIsActive(true);
-
-            trainee = new Trainee();
-            trainee.setUser(user);
-            trainee.setDateOfBirth(LocalDate.of(1990, 1, 15));
-            trainee.setAddress("123 Main St");
-
-            profileResponse = new TraineeProfileResponse();
-            profileResponse.setUsername(USERNAME);
-            profileResponse.setFirstName(FIRST_NAME);
-            profileResponse.setLastName(LAST_NAME);
-            profileResponse.setIsActive(true);
-        }
-
         @Test
-        @DisplayName("Should get trainee profile successfully")
-        void getTraineeProfile_Success() {
-            // Given
-            doNothing().when(traineeService).authenticate(USERNAME, PASSWORD);
-            when(traineeService.getByUsername(USERNAME)).thenReturn(trainee);
-            when(traineeMapper.toProfileResponse(trainee)).thenReturn(profileResponse);
+        @DisplayName("Should return 200 OK with trainee profile")
+        void getTraineeProfile_WithValidUsername_ReturnsProfile() throws Exception {
+            // Arrange
+            doNothing().when(userService).isAuthenticated(USERNAME);
+            when(traineeService.getByUsername(USERNAME)).thenReturn(testTrainee);
+            when(traineeMapper.toProfileResponse(any(Trainee.class))).thenReturn(profileResponse);
 
-            // When
-            ResponseEntity<TraineeProfileResponse> response = traineeController.getTraineeProfile(USERNAME, PASSWORD);
+            // Act & Assert
+            mockMvc.perform(get("/api/trainees/{username}", USERNAME))
+                    .andExpect(status().isOk())
+                    .andExpect(jsonPath("$.username").value(USERNAME))
+                    .andExpect(jsonPath("$.firstName").value(FIRST_NAME))
+                    .andExpect(jsonPath("$.lastName").value(LAST_NAME))
+                    .andExpect(jsonPath("$.isActive").value(true));
 
-            // Then
-            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-            assertThat(response.getBody()).isNotNull();
-            assertThat(response.getBody().getUsername()).isEqualTo(USERNAME);
-            assertThat(response.getBody().getFirstName()).isEqualTo(FIRST_NAME);
-            assertThat(response.getBody().getLastName()).isEqualTo(LAST_NAME);
-
-            verify(traineeService).authenticate(USERNAME, PASSWORD);
+            verify(userService).isAuthenticated(USERNAME);
             verify(traineeService).getByUsername(USERNAME);
-            verify(traineeMapper).toProfileResponse(trainee);
-        }
-
-        @Test
-        @DisplayName("Should authenticate before fetching profile")
-        void getTraineeProfile_AuthenticatesFirst() {
-            // Given
-            doNothing().when(traineeService).authenticate(USERNAME, PASSWORD);
-            when(traineeService.getByUsername(USERNAME)).thenReturn(trainee);
-            when(traineeMapper.toProfileResponse(trainee)).thenReturn(profileResponse);
-
-            // When
-            traineeController.getTraineeProfile(USERNAME, PASSWORD);
-
-            // Then
-            var inOrder = inOrder(traineeService);
-            inOrder.verify(traineeService).authenticate(USERNAME, PASSWORD);
-            inOrder.verify(traineeService).getByUsername(USERNAME);
+            verify(traineeMapper).toProfileResponse(any(Trainee.class));
         }
     }
+
+    // ==================== UPDATE TRAINEE PROFILE TESTS ====================
 
     @Nested
     @DisplayName("Update Trainee Profile Tests")
     class UpdateTraineeProfileTests {
 
-        private UpdateTraineeRequest updateRequest;
-        private Trainee updatedTrainee;
-        private TraineeProfileResponse profileResponse;
-
-        @BeforeEach
-        void setUp() {
-            updateRequest = new UpdateTraineeRequest();
-            updateRequest.setUsername(USERNAME);
-            updateRequest.setFirstName("UpdatedJohn");
-            updateRequest.setLastName("UpdatedDoe");
-            updateRequest.setIsActive(true);
-
-            User user = new User();
-            user.setUsername(USERNAME);
-            user.setFirstName("UpdatedJohn");
-            user.setLastName("UpdatedDoe");
-            user.setIsActive(true);
-
-            updatedTrainee = new Trainee();
-            updatedTrainee.setUser(user);
-
-            profileResponse = new TraineeProfileResponse();
-            profileResponse.setUsername(USERNAME);
-            profileResponse.setFirstName("UpdatedJohn");
-            profileResponse.setLastName("UpdatedDoe");
-        }
-
         @Test
-        @DisplayName("Should update trainee profile successfully")
-        void updateTraineeProfile_Success() {
-            // Given
-            when(traineeService.updateProfile(USERNAME, updateRequest)).thenReturn(updatedTrainee);
-            when(traineeMapper.toProfileResponse(updatedTrainee)).thenReturn(profileResponse);
+        @DisplayName("Should return 200 OK when update is successful")
+        void updateTraineeProfile_WithValidRequest_ReturnsUpdatedProfile() throws Exception {
+            // Arrange
+            UpdateTraineeRequest request = UpdateTraineeRequest.builder()
+                    .username(USERNAME)
+                    .firstName("UpdatedFirst")
+                    .lastName("UpdatedLast")
+                    .isActive(true)
+                    .dateOfBirth(DATE_OF_BIRTH)
+                    .address("New Address")
+                    .build();
 
-            // When
-            ResponseEntity<TraineeProfileResponse> response = traineeController.updateTraineeProfile(USERNAME, updateRequest);
+            doNothing().when(userService).isAuthenticated(USERNAME);
+            when(traineeService.updateProfile(eq(USERNAME), any(UpdateTraineeRequest.class)))
+                    .thenReturn(testTrainee);
+            when(traineeMapper.toProfileResponse(any(Trainee.class))).thenReturn(profileResponse);
 
-            // Then
-            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-            assertThat(response.getBody()).isNotNull();
-            assertThat(response.getBody().getFirstName()).isEqualTo("UpdatedJohn");
+            // Act & Assert
+            mockMvc.perform(put("/api/trainees/{username}", USERNAME)
+                            .contentType(MediaType.APPLICATION_JSON)
+                            .content(objectMapper.writeValueAsString(request)))
+                    .andExpect(status().isOk());
 
-            verify(traineeService).updateProfile(USERNAME, updateRequest);
-            verify(traineeMapper).toProfileResponse(updatedTrainee);
-        }
-
-        @Test
-        @DisplayName("Should throw ValidationException when username mismatch")
-        void updateTraineeProfile_UsernameMismatch_ThrowsException() {
-            // Given
-            String differentUsername = "different.user";
-
-            // When/Then
-            assertThatThrownBy(() -> traineeController.updateTraineeProfile(differentUsername, updateRequest))
-                    .isInstanceOf(ValidationException.class)
-                    .hasMessage("Username in path does not match username in request body");
-
-            verify(traineeService, never()).updateProfile(any(), any());
+            verify(userService).isAuthenticated(USERNAME);
+            verify(traineeService).updateProfile(eq(USERNAME), any(UpdateTraineeRequest.class));
         }
     }
+
+    // ==================== DELETE TRAINEE PROFILE TESTS ====================
 
     @Nested
     @DisplayName("Delete Trainee Profile Tests")
     class DeleteTraineeProfileTests {
 
         @Test
-        @DisplayName("Should delete trainee profile successfully")
-        void deleteTraineeProfile_Success() {
-            // Given
-            doNothing().when(traineeService).deleteByUsername(USERNAME, PASSWORD);
+        @DisplayName("Should return 204 NO CONTENT when delete is successful")
+        void deleteTraineeProfile_WithValidUsername_ReturnsNoContent() throws Exception {
+            // Arrange
+            doNothing().when(userService).isAuthenticated(USERNAME);
+            doNothing().when(traineeService).deleteByUsername(USERNAME);
 
-            // When
-            ResponseEntity<Void> response = traineeController.deleteTraineeProfile(USERNAME, PASSWORD);
+            // Act & Assert
+            mockMvc.perform(delete("/api/trainees/{username}", USERNAME))
+                    .andExpect(status().isNoContent());
 
-            // Then
-            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
-            assertThat(response.getBody()).isNull();
-
-            verify(traineeService).deleteByUsername(USERNAME, PASSWORD);
-        }
-
-        @Test
-        @DisplayName("Should call service with correct parameters")
-        void deleteTraineeProfile_CallsServiceWithCorrectParams() {
-            // Given
-            doNothing().when(traineeService).deleteByUsername(USERNAME, PASSWORD);
-
-            // When
-            traineeController.deleteTraineeProfile(USERNAME, PASSWORD);
-
-            // Then
-            verify(traineeService).deleteByUsername(USERNAME, PASSWORD);
+            verify(userService).isAuthenticated(USERNAME);
+            verify(traineeService).deleteByUsername(USERNAME);
         }
     }
+
+    // ==================== TOGGLE TRAINEE STATUS TESTS ====================
 
     @Nested
     @DisplayName("Toggle Trainee Status Tests")
     class ToggleTraineeStatusTests {
 
-        private ToggleActiveRequest toggleRequest;
+        @Test
+        @DisplayName("Should return 200 OK when activating trainee")
+        void toggleTraineeStatus_Activate_ReturnsOk() throws Exception {
+            // Arrange - ToggleActiveRequest has username and isActive fields
+            ToggleActiveRequest request = ToggleActiveRequest.builder()
+                    .username(USERNAME)
+                    .isActive(true)
+                    .build();
 
-        @BeforeEach
-        void setUp() {
-            toggleRequest = new ToggleActiveRequest();
-            toggleRequest.setUsername(USERNAME);
-            toggleRequest.setPassword(PASSWORD);
-            toggleRequest.setIsActive(false);
+            doNothing().when(userService).isAuthenticated(USERNAME);
+            doNothing().when(userService).setActiveStatus(USERNAME, true);
+
+            // Act & Assert
+            mockMvc.perform(patch("/api/trainees/{username}/status", USERNAME)
+                            .contentType(MediaType.APPLICATION_JSON)
+                            .content(objectMapper.writeValueAsString(request)))
+                    .andExpect(status().isOk());
+
+            verify(userService).isAuthenticated(USERNAME);
+            verify(userService).setActiveStatus(USERNAME, true);
         }
 
         @Test
-        @DisplayName("Should toggle trainee status successfully")
-        void toggleTraineeStatus_Success() {
-            // Given
-            doNothing().when(userService).setActiveStatus(USERNAME, PASSWORD, false);
+        @DisplayName("Should return 200 OK when deactivating trainee")
+        void toggleTraineeStatus_Deactivate_ReturnsOk() throws Exception {
+            // Arrange
+            ToggleActiveRequest request = ToggleActiveRequest.builder()
+                    .username(USERNAME)
+                    .isActive(false)
+                    .build();
 
-            // When
-            ResponseEntity<Void> response = traineeController.toggleTraineeStatus(USERNAME, toggleRequest);
+            doNothing().when(userService).isAuthenticated(USERNAME);
+            doNothing().when(userService).setActiveStatus(USERNAME, false);
 
-            // Then
-            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+            // Act & Assert
+            mockMvc.perform(patch("/api/trainees/{username}/status", USERNAME)
+                            .contentType(MediaType.APPLICATION_JSON)
+                            .content(objectMapper.writeValueAsString(request)))
+                    .andExpect(status().isOk());
 
-            verify(userService).setActiveStatus(USERNAME, PASSWORD, false);
-        }
-
-        @Test
-        @DisplayName("Should activate trainee successfully")
-        void toggleTraineeStatus_Activate_Success() {
-            // Given
-            toggleRequest.setIsActive(true);
-            doNothing().when(userService).setActiveStatus(USERNAME, PASSWORD, true);
-
-            // When
-            ResponseEntity<Void> response = traineeController.toggleTraineeStatus(USERNAME, toggleRequest);
-
-            // Then
-            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-
-            verify(userService).setActiveStatus(USERNAME, PASSWORD, true);
-        }
-
-        @Test
-        @DisplayName("Should throw ValidationException when username mismatch")
-        void toggleTraineeStatus_UsernameMismatch_ThrowsException() {
-            // Given
-            String differentUsername = "different.user";
-
-            // When/Then
-            assertThatThrownBy(() -> traineeController.toggleTraineeStatus(differentUsername, toggleRequest))
-                    .isInstanceOf(ValidationException.class)
-                    .hasMessage("Username in path does not match username in request body");
-
-            verify(userService, never()).setActiveStatus(any(), any(), anyBoolean());
+            verify(userService).isAuthenticated(USERNAME);
+            verify(userService).setActiveStatus(USERNAME, false);
         }
     }
+
+    // ==================== UPDATE TRAINEE TRAINERS LIST TESTS ====================
 
     @Nested
     @DisplayName("Update Trainee Trainers List Tests")
     class UpdateTraineeTrainersListTests {
 
-        private UpdateTraineeTrainersRequest updateTrainersRequest;
-        private List<Trainer> trainers;
-        private List<TrainerSummaryResponse> trainerSummaryResponses;
-
-        @BeforeEach
-        void setUp() {
-            updateTrainersRequest = new UpdateTraineeTrainersRequest();
-            updateTrainersRequest.setTraineeUsername(USERNAME);
-            updateTrainersRequest.setPassword(PASSWORD);
-            updateTrainersRequest.setTrainerUsernames(Arrays.asList("trainer1", "trainer2"));
-
-            User trainerUser1 = new User();
-            trainerUser1.setUsername("trainer1");
-            trainerUser1.setFirstName("Trainer");
-            trainerUser1.setLastName("One");
-
-            User trainerUser2 = new User();
-            trainerUser2.setUsername("trainer2");
-            trainerUser2.setFirstName("Trainer");
-            trainerUser2.setLastName("Two");
-
-            Trainer trainer1 = new Trainer();
-            trainer1.setUser(trainerUser1);
-
-            Trainer trainer2 = new Trainer();
-            trainer2.setUser(trainerUser2);
-
-            trainers = Arrays.asList(trainer1, trainer2);
-
-            TrainerSummaryResponse summary1 = new TrainerSummaryResponse();
-            summary1.setUsername("trainer1");
-
-            TrainerSummaryResponse summary2 = new TrainerSummaryResponse();
-            summary2.setUsername("trainer2");
-
-            trainerSummaryResponses = Arrays.asList(summary1, summary2);
-        }
-
         @Test
-        @DisplayName("Should update trainers list successfully")
-        void updateTraineeTrainersList_Success() {
-            // Given
-            when(traineeService.updateTrainersList(USERNAME, PASSWORD, Arrays.asList("trainer1", "trainer2")))
-                    .thenReturn(trainers);
-            when(trainerMapper.toSummaryResponseList(trainers)).thenReturn(trainerSummaryResponses);
+        @DisplayName("Should return 200 OK with updated trainers list")
+        void updateTraineeTrainersList_WithValidRequest_ReturnsTrainersList() throws Exception {
+            // Arrange
+            UpdateTraineeTrainersRequest request = UpdateTraineeTrainersRequest.builder()
+                    .traineeUsername(USERNAME)
+                    .trainerUsernames(List.of("jane.smith"))
+                    .build();
 
-            // When
-            ResponseEntity<List<TrainerSummaryResponse>> response =
-                    traineeController.updateTraineeTrainersList(USERNAME, updateTrainersRequest);
+            List<Trainer> trainers = List.of(testTrainer);
 
-            // Then
-            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-            assertThat(response.getBody()).isNotNull();
-            assertThat(response.getBody()).hasSize(2);
+            TrainerSummaryResponse trainerSummary = TrainerSummaryResponse.builder()
+                    .username("jane.smith")
+                    .firstName("Jane")
+                    .lastName("Smith")
+                    .specialization(TrainingTypeName.FITNESS)
+                    .build();
 
-            verify(traineeService).updateTrainersList(USERNAME, PASSWORD, Arrays.asList("trainer1", "trainer2"));
-            verify(trainerMapper).toSummaryResponseList(trainers);
-        }
+            List<TrainerSummaryResponse> trainerResponses = List.of(trainerSummary);
 
-        @Test
-        @DisplayName("Should throw ValidationException when username mismatch")
-        void updateTraineeTrainersList_UsernameMismatch_ThrowsException() {
-            // Given
-            String differentUsername = "different.user";
+            when(traineeService.updateTrainersList(eq(USERNAME), anyList())).thenReturn(trainers);
+            when(trainerMapper.toSummaryResponseList(anyList())).thenReturn(trainerResponses);
 
-            // When/Then
-            assertThatThrownBy(() -> traineeController.updateTraineeTrainersList(differentUsername, updateTrainersRequest))
-                    .isInstanceOf(ValidationException.class)
-                    .hasMessage("Username in path does not match username in request body");
+            // Act & Assert
+            mockMvc.perform(put("/api/trainees/{username}/trainers", USERNAME)
+                            .contentType(MediaType.APPLICATION_JSON)
+                            .content(objectMapper.writeValueAsString(request)))
+                    .andExpect(status().isOk())
+                    .andExpect(jsonPath("$[0].username").value("jane.smith"))
+                    .andExpect(jsonPath("$[0].firstName").value("Jane"))
+                    .andExpect(jsonPath("$[0].lastName").value("Smith"));
 
-            verify(traineeService, never()).updateTrainersList(any(), any(), any());
-        }
-
-        @Test
-        @DisplayName("Should return empty list when no trainers assigned")
-        void updateTraineeTrainersList_EmptyList_Success() {
-            // Given
-            updateTrainersRequest.setTrainerUsernames(Collections.emptyList());
-            when(traineeService.updateTrainersList(USERNAME, PASSWORD, Collections.emptyList()))
-                    .thenReturn(Collections.emptyList());
-            when(trainerMapper.toSummaryResponseList(Collections.emptyList()))
-                    .thenReturn(Collections.emptyList());
-
-            // When
-            ResponseEntity<List<TrainerSummaryResponse>> response =
-                    traineeController.updateTraineeTrainersList(USERNAME, updateTrainersRequest);
-
-            // Then
-            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-            assertThat(response.getBody()).isEmpty();
+            verify(traineeService).updateTrainersList(eq(USERNAME), anyList());
+            verify(trainerMapper).toSummaryResponseList(anyList());
         }
     }
+
+    // ==================== GET TRAINEE TRAININGS TESTS ====================
 
     @Nested
     @DisplayName("Get Trainee Trainings Tests")
     class GetTraineeTrainingsTests {
 
-        private List<Training> trainings;
-        private List<TrainingResponse> trainingResponses;
-        private LocalDate fromDate;
-        private LocalDate toDate;
+        @Test
+        @DisplayName("Should return 200 OK with trainings list")
+        void getTraineeTrainings_WithValidRequest_ReturnsTrainingsList() throws Exception {
+            // Arrange
+            Training training = Training.builder()
+                    .id(1L)
+                    .trainee(testTrainee)
+                    .trainer(testTrainer)
+                    .trainingName("Morning Workout")
+                    .trainingType(trainingType)
+                    .trainingDate(LocalDate.now())
+                    .trainingDurationMinutes(60)
+                    .build();
 
-        @BeforeEach
-        void setUp() {
-            fromDate = LocalDate.of(2024, 1, 1);
-            toDate = LocalDate.of(2024, 12, 31);
+            List<Training> trainings = List.of(training);
 
-            Training training1 = new Training();
-            training1.setTrainingName("Training 1");
+            TrainingResponse trainingResponse = TrainingResponse.builder()
+                    .trainingName("Morning Workout")
+                    .trainingDate(LocalDate.now())
+                    .trainingType(TrainingTypeName.FITNESS)
+                    .trainingDuration(60)
+                    .trainerName("Jane Smith")
+                    .traineeName("John Doe")
+                    .build();
 
-            Training training2 = new Training();
-            training2.setTrainingName("Training 2");
+            List<TrainingResponse> trainingResponses = List.of(trainingResponse);
 
-            trainings = Arrays.asList(training1, training2);
+            when(trainingService.getTraineeTrainingsByCriteria(
+                    eq(USERNAME), isNull(), isNull(), isNull(), isNull()))
+                    .thenReturn(trainings);
+            when(trainingMapper.toResponseList(anyList())).thenReturn(trainingResponses);
 
-            TrainingResponse response1 = new TrainingResponse();
-            response1.setTrainingName("Training 1");
+            // Act & Assert
+            mockMvc.perform(get("/api/trainees/{username}/trainings", USERNAME))
+                    .andExpect(status().isOk())
+                    .andExpect(jsonPath("$[0].trainingName").value("Morning Workout"))
+                    .andExpect(jsonPath("$[0].trainingDuration").value(60));
 
-            TrainingResponse response2 = new TrainingResponse();
-            response2.setTrainingName("Training 2");
-
-            trainingResponses = Arrays.asList(response1, response2);
+            verify(trainingService).getTraineeTrainingsByCriteria(
+                    eq(USERNAME), isNull(), isNull(), isNull(), isNull());
+            verify(trainingMapper).toResponseList(anyList());
         }
 
         @Test
-        @DisplayName("Should get trainee trainings with all filters")
-        void getTraineeTrainings_WithAllFilters_Success() {
-            // Given
-            String trainerName = "trainer1";
-            TrainingTypeName trainingType = TrainingTypeName.FITNESS;
+        @DisplayName("Should return 200 OK with filters applied")
+        void getTraineeTrainings_WithFilters_ReturnsFilteredTrainingsList() throws Exception {
+            // Arrange
+            LocalDate fromDate = LocalDate.of(2024, 1, 1);
+            LocalDate toDate = LocalDate.of(2024, 12, 31);
+            String trainerName = "Jane";
 
             when(trainingService.getTraineeTrainingsByCriteria(
-                    USERNAME, PASSWORD, fromDate, toDate, trainerName, trainingType))
-                    .thenReturn(trainings);
-            when(trainingMapper.toResponseList(trainings)).thenReturn(trainingResponses);
+                    eq(USERNAME), eq(fromDate), eq(toDate), eq(trainerName), eq(TrainingTypeName.FITNESS)))
+                    .thenReturn(List.of());
+            when(trainingMapper.toResponseList(anyList())).thenReturn(List.of());
 
-            // When
-            ResponseEntity<List<TrainingResponse>> response = traineeController.getTraineeTrainings(
-                    USERNAME, PASSWORD, fromDate, toDate, trainerName, trainingType);
-
-            // Then
-            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-            assertThat(response.getBody()).isNotNull();
-            assertThat(response.getBody()).hasSize(2);
-
-            verify(trainingService).getTraineeTrainingsByCriteria(
-                    USERNAME, PASSWORD, fromDate, toDate, trainerName, trainingType);
-            verify(trainingMapper).toResponseList(trainings);
-        }
-
-        @Test
-        @DisplayName("Should get trainee trainings without filters")
-        void getTraineeTrainings_WithoutFilters_Success() {
-            // Given
-            when(trainingService.getTraineeTrainingsByCriteria(
-                    USERNAME, PASSWORD, null, null, null, null))
-                    .thenReturn(trainings);
-            when(trainingMapper.toResponseList(trainings)).thenReturn(trainingResponses);
-
-            // When
-            ResponseEntity<List<TrainingResponse>> response = traineeController.getTraineeTrainings(
-                    USERNAME, PASSWORD, null, null, null, null);
-
-            // Then
-            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-            assertThat(response.getBody()).isNotNull();
-            assertThat(response.getBody()).hasSize(2);
+            // Act & Assert
+            mockMvc.perform(get("/api/trainees/{username}/trainings", USERNAME)
+                            .param("fromDate", "2024-01-01")
+                            .param("toDate", "2024-12-31")
+                            .param("trainerName", trainerName)
+                            .param("trainingType", "FITNESS"))
+                    .andExpect(status().isOk())
+                    .andExpect(jsonPath("$").isArray());
 
             verify(trainingService).getTraineeTrainingsByCriteria(
-                    USERNAME, PASSWORD, null, null, null, null);
+                    eq(USERNAME), eq(fromDate), eq(toDate), eq(trainerName), eq(TrainingTypeName.FITNESS));
         }
 
         @Test
         @DisplayName("Should return empty list when no trainings found")
-        void getTraineeTrainings_NoTrainings_ReturnsEmptyList() {
-            // Given
+        void getTraineeTrainings_NoTrainings_ReturnsEmptyList() throws Exception {
+            // Arrange
             when(trainingService.getTraineeTrainingsByCriteria(
-                    USERNAME, PASSWORD, null, null, null, null))
-                    .thenReturn(Collections.emptyList());
-            when(trainingMapper.toResponseList(Collections.emptyList()))
-                    .thenReturn(Collections.emptyList());
+                    eq(USERNAME), isNull(), isNull(), isNull(), isNull()))
+                    .thenReturn(List.of());
+            when(trainingMapper.toResponseList(anyList())).thenReturn(List.of());
 
-            // When
-            ResponseEntity<List<TrainingResponse>> response = traineeController.getTraineeTrainings(
-                    USERNAME, PASSWORD, null, null, null, null);
-
-            // Then
-            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-            assertThat(response.getBody()).isEmpty();
-        }
-
-        @Test
-        @DisplayName("Should get trainee trainings with date filters only")
-        void getTraineeTrainings_WithDateFiltersOnly_Success() {
-            // Given
-            when(trainingService.getTraineeTrainingsByCriteria(
-                    USERNAME, PASSWORD, fromDate, toDate, null, null))
-                    .thenReturn(trainings);
-            when(trainingMapper.toResponseList(trainings)).thenReturn(trainingResponses);
-
-            // When
-            ResponseEntity<List<TrainingResponse>> response = traineeController.getTraineeTrainings(
-                    USERNAME, PASSWORD, fromDate, toDate, null, null);
-
-            // Then
-            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-            assertThat(response.getBody()).hasSize(2);
-
-            verify(trainingService).getTraineeTrainingsByCriteria(
-                    USERNAME, PASSWORD, fromDate, toDate, null, null);
-        }
-
-        @Test
-        @DisplayName("Should get trainee trainings with training type filter only")
-        void getTraineeTrainings_WithTrainingTypeOnly_Success() {
-            // Given
-            TrainingTypeName trainingType = TrainingTypeName.YOGA;
-
-            when(trainingService.getTraineeTrainingsByCriteria(
-                    USERNAME, PASSWORD, null, null, null, trainingType))
-                    .thenReturn(trainings);
-            when(trainingMapper.toResponseList(trainings)).thenReturn(trainingResponses);
-
-            // When
-            ResponseEntity<List<TrainingResponse>> response = traineeController.getTraineeTrainings(
-                    USERNAME, PASSWORD, null, null, null, trainingType);
-
-            // Then
-            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-            assertThat(response.getBody()).hasSize(2);
-
-            verify(trainingService).getTraineeTrainingsByCriteria(
-                    USERNAME, PASSWORD, null, null, null, trainingType);
+            // Act & Assert
+            mockMvc.perform(get("/api/trainees/{username}/trainings", USERNAME))
+                    .andExpect(status().isOk())
+                    .andExpect(jsonPath("$").isArray())
+                    .andExpect(jsonPath("$").isEmpty());
         }
     }
 }
